// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductConfigurationOptionButton should render with full props 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D0D3D4",
        "borderWidth": 1,
        "flexDirection": "row",
        "flexGrow": 1,
        "marginRight": 8,
        "maxWidth": 256,
        "padding": 8,
        "paddingRight": 16,
      },
      Object {
        "borderColor": "#D45D00",
        "borderWidth": 2,
        "padding": 7,
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "http://image.com/",
      }
    }
    style={
      Object {
        "height": 60,
        "marginRight": 8,
        "width": 60,
      }
    }
  />
  <View
    style={
      Object {
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      size="small"
      weight="bold"
    >
      this is test text
    </Text>
    <Text
      color="primary"
      size="small"
      weight="bold"
    >
      $123.45
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`ProductConfigurationOptionButton should render with no price, no image and not selected 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D0D3D4",
        "borderWidth": 1,
        "flexDirection": "row",
        "flexGrow": 1,
        "marginRight": 8,
        "maxWidth": 256,
        "padding": 8,
        "paddingRight": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      size="small"
      weight="bold"
    >
      this is test text
    </Text>
  </View>
</TouchableOpacity>
`;
